--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
                         <i class="bi bi-arrow-right-short" id="pop_song_right"></i>
                     </div>
                 </div>
+                <!-- // giờ bạn muốn css ại tẹo thì chỉ cần up à -->
                 <div class="pop_song">
                     <li class="songItem">
                         <div class="img_play">
